[tool.poetry]
name = "get-papers-list"
version = "0.1.0"
description = "Fetch and filter PubMed papers based on a query."
authors = ["Abish abishchhetri.2502@gmail.com"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.1.0"  

[tool.poetry.scripts]
get-papers-list = "get_papers_list_cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"